<resources>
    <string name="app_name">NMedia</string>
    <string name="avatar">Avatar</string>
    <string name="desc_options_button">Options</string>
    <string name="image_heart">Heart</string>
    <string name="image_share">Share</string>
    <string name="image_view">View</string>
    <string name="menu_item_edit">Edit</string>
    <string name="hint_new_post">Enter text</string>
    <string name="desc_fab_add">Add button</string>
    <string name="main_edit_message">Edit Message</string>
    <string name="desc_fab_cancel">Cancel button</string>
    <string name="desc_fab_save">Save button</string>
    <string name="desc_attachment_youtube">Attachment</string>
    <string name="chooser_share_post">Share post</string>
    <string name="desc_fab_post_save">OK button</string>

    <string name="title_new_post">New post</string>
    <string name="title_edit_post">Edit post</string>
    <string name="title_details_post">Post details</string>

    <string name="action_bar_label">New | edit post</string>
    <string name="menu_item_move_up">Move Up</string>
    <string name="menu_item_move_down">Move Down</string>
    <string name="menu_item_delete">Delete</string>

    <string name="done">Done</string>
    <string name="new_post_label_author">Author</string>
    <string name="new_post_label_text">Content</string>
    <string name="new_post_label_youtube">Youtube</string>
    <string name="new_post_hint_enter_author">Enter author name</string>
    <string name="new_post_hint_enter_content_post">Enter post\'s content</string>
    <string name="new_post_hint_enter_youtube_link">Enter youtube\'s link</string>

    <string name="alert_dialog_delete_title">Delete post</string>
    <string name="alert_dialog_delete_message">Are you sure you want to delete this post?</string>
    <string name="alert_dialog_delete_positive_button">Delete</string>
    <string name="alert_dialog_delete_negative_button">Cancel</string>
</resources>