<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:padding="@dimen/common_spacing_small">

    <ImageView
        android:id="@+id/post_avatar_image_view"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/avatar"
        android:src="@drawable/ic_netology"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/post_author_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:lines="1"
        android:singleLine="true"
        android:textColor="@color/gray_800"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/options_button"
        app:layout_constraintStart_toEndOf="@id/post_avatar_image_view"
        app:layout_constraintTop_toTopOf="@id/post_avatar_image_view"
        tools:text="Автор поста" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/post_created_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:gravity="start"
        android:lines="1"
        android:singleLine="true"
        android:textColor="@color/gray_800"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="@+id/post_avatar_image_view"
        app:layout_constraintEnd_toEndOf="@+id/post_author_text_view"
        app:layout_constraintStart_toStartOf="@+id/post_author_text_view"
        app:layout_constraintTop_toBottomOf="@+id/post_author_text_view"
        tools:text="10/04/2022" />

    <ImageView
        android:id="@+id/options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/desc_options_button"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:src ="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_author_text_view" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="post_avatar_image_view, post_author_text_view, post_created_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/post_content_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing_small"
        android:layout_marginEnd="@dimen/common_spacing"
        android:paddingBottom="@dimen/common_spacing_small"
        android:lines="@integer/count_post_lines_content_list"
        android:ellipsize="end"
        android:textColor="@color/gray_800"
        android:textSize="@dimen/font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_barrier"
        tools:text="Text" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/middle_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="post_content_text_view"
        app:layout_constraintTop_toBottomOf="@+id/post_content_text_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/post_like_button"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:checkable="true"
        android:contentDescription="@string/image_heart"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/ic_heart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/middle_barrier"
        tools:ignore="TextContrastCheck"
        tools:text="10100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/post_share_button"
        style="@style/Widget.AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing_small"
        android:contentDescription="@string/image_share"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@+id/post_like_button"
        app:layout_constraintStart_toEndOf="@id/post_like_button"
        app:layout_constraintTop_toTopOf="@id/post_like_button"
        tools:ignore="TextContrastCheck"
        tools:text="103" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/post_view_button"
        style="@style/Widget.AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing_small"
        android:contentDescription="@string/image_view"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/ic_view"
        app:layout_constraintBottom_toBottomOf="@+id/post_share_button"
        app:layout_constraintStart_toEndOf="@+id/post_share_button"
        app:layout_constraintTop_toTopOf="@id/post_share_button"
        tools:ignore="TextContrastCheck"
        tools:text="1243" />

    <ImageView
        android:id="@+id/video_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing"
        android:contentDescription="@string/desc_attachment_youtube"
        android:src="@drawable/ic_attach_file"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/post_view_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_view_button" />

</androidx.constraintlayout.widget.ConstraintLayout>