<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing_small">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:gravity="start"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/post_avatar_image_view"
            android:layout_width="@dimen/post_avatar_size"
            android:layout_height="@dimen/post_avatar_size"
            android:layout_weight="0.1"
            android:contentDescription="@string/avatar"
            android:src="@drawable/ic_netology" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/post_avatar_size"
            android:layout_marginStart="@dimen/common_spacing_small"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/post_author_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/gray_800"
                android:textStyle="bold"
                android:textSize="@dimen/font_size"
                tools:text="Автор поста" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/post_created_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:singleLine="true"
                android:textColor="@color/gray_800"
                android:textSize="@dimen/font_size"
                tools:text="10/04/2022" />

        </LinearLayout>

        <ImageView
            android:id="@+id/options_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/post_avatar_size"
            android:layout_weight="0.1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_options_button"
            android:minWidth="40dp"
            android:minHeight="40dp"
            android:src="@drawable/ic_baseline_more_vert_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/middle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing_small"
        android:layout_marginEnd="@dimen/common_spacing"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/post_content_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:maxLines="20"
            android:scrollbars="vertical"
            android:textColor="@color/gray_800"
            android:textSize="@dimen/font_size"
            tools:text="Содержание поста" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/post_video_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing_small"
            android:layout_marginBottom="@dimen/common_spacing_small"
            android:inputType="textMultiLine"
            android:textSize="@dimen/font_size"
            android:textStyle="bold"
            tools:text="https://youtube.com/..." />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing_small"
        android:layout_marginEnd="@dimen/common_spacing"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/middle"
        app:layout_constraintStart_toStartOf="@+id/middle"
        app:layout_constraintTop_toBottomOf="@+id/middle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/post_like_button"
            style="@style/Widget.AppTheme.LikeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/image_heart"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_heart"
            tools:ignore="TextContrastCheck"
            tools:text="10100" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/post_share_button"
            style="@style/Widget.AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing_small"
            android:contentDescription="@string/image_share"
            android:enabled="true"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_share"
            tools:ignore="TextContrastCheck"
            tools:text="103" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/post_view_button"
            style="@style/Widget.AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing_small"
            android:contentDescription="@string/image_view"
            android:enabled="false"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_view"
            tools:ignore="TextContrastCheck"
            tools:text="1243" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_small"
        android:contentDescription="@string/desc_fab_post_save"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_ok_24dp"
        tools:ignore="RedundantDescriptionCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>